Make Play, Pause/Resume, and Stop buttons sticky (always visisble) below the navbar on mobile devices.

--- a/static/styles/frontpage.css
+++ b/static/styles/frontpage.css
@@ -164,3 +164,10 @@ html, body{
 
 #controllerMessage { overflow-wrap: anywhere; }
 
+#stickyButtons {
+  position: sticky;
+  top: 0px;
+  z-index:1020;
+  background-color: #FFF;
+}
+
